create common file for header. add bootstrap

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Wine Service</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="~{common/head :: head_fragment(title = 'Search Wine', scripts = ~{}, links = ~{})}"></head>
+
+<div th:replace="~{common/header :: header_fragment}"></div>
+
 <body>
   <h1>This is the screen to search for wines.</h1>
 </body>
