--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Wine Service</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{common/head :: head_fragment(title = 'Wine Service', scripts = ~{}, links = ~{})}"></head>
+
+<div th:replace="~{common/header :: header_fragment}"></div>
+
 <body>
   <h1>This is the home page.</h1>
+  <a th:href="@{/}" class="btn btn-primary">Click</a>
 </body>
 </html>
